🐛 fixed aspect ratio issue with news cards (#1901)
the 16/9 height calculation for image container was causing some images to not fit their aspect ration. The height calculation was removed and 16/9 ratio was adding to the padding for news cards with an icon instead of an image #1758

--- a/frontend/scss/components/organisms/news.scss
+++ b/frontend/scss/components/organisms/news.scss
@@ -106,7 +106,6 @@
 
   &-image {
     width: 100%;
-    height: 56.25%;
     background-color: color('blue-ribbon');
   }
 
@@ -131,6 +130,7 @@
     justify-content: center;
     align-items: center;
     fill: color('white');
+    padding: calc(28.125% - 2em) 0;
 
     .#{atom('ico')} {
       @include ico;
